--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,5 @@
     <string name="app_name">Task3</string>
     <string name="button_text">Next</string>
     <string name="toast_text">Application Started</string>
-    <string name="message"> </string>
-    <string name="message2">Task 3 Completed </string>
-</resources>
+    <string name="message">Task 3 Completed</string>
+    </resources>
